--- a/src/sass/base.scss
+++ b/src/sass/base.scss
@@ -1,5 +1,7 @@
 html {
   box-sizing: border-box;
+  overflow-y: auto;
+  scroll-behavior: smooth;
 }
 
 *,
@@ -9,12 +11,16 @@ html {
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-    Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif,
+  margin: 0;
+  color: #212121;
+  background-color: #fff;
+  font-family: 'Open Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI',
+    Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif,
     'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+}
 
-  /*
-   * CSS image reference example.
-   */
-  background-image: url('images/bg-pattern.png');
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
 }
