--- a/src/sass/page-header.scss
+++ b/src/sass/page-header.scss
@@ -47,9 +47,12 @@
 .site-logo {
   display: inline-block;
   text-decoration: none;
-  font-size: 28px;
   color: $primary-black-color;
+  font-weight: 700;
+  font-size: 28px;
+  user-select: none;
 }
+
 // TODO: назвать span классом
 .site-logo span {
   color: $accent-color;
