--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -2,4 +2,5 @@
 @import './base.scss';
 @import './container.scss';
 @import './page-header.scss';
+@import './section.scss';
 @import './page-footer.scss';
