Add list styling

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -3,4 +3,5 @@
 @import './container.scss';
 @import './page-header.scss';
 @import './section.scss';
+@import './list.scss';
 @import './page-footer.scss';
