Add baner with hero and team section

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -2,6 +2,8 @@
 @import './base.scss';
 @import './container.scss';
 @import './page-header.scss';
+@import './baner.scss';
 @import './section.scss';
 @import './list.scss';
+@import './team.scss';
 @import './page-footer.scss';
