--- a/src/sass/container.scss
+++ b/src/sass/container.scss
@@ -1,6 +1,14 @@
 .container {
   width: 100%;
-  max-width: 1440px;
+  width: 320px;
   margin: 0px auto;
   padding: 0px 16px;
+
+  @media (min-width: 768px) {
+    width: 720px;
+  }
+
+  @media (min-width: 992px) {
+    width: 960px;
+  }
 }
