Add features and hero

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -3,6 +3,7 @@
 @import './container.scss';
 @import './page-header.scss';
 @import './baner.scss';
+@import './features.scss';
 @import './section.scss';
 @import './list.scss';
 @import './team.scss';
