--- a/src/sass/baner.scss
+++ b/src/sass/baner.scss
@@ -1,9 +1,22 @@
 .baner {
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 300px;
-  background-color: palevioletred;
+  // min-height: 300px;
+  padding-top: 24px;
+  padding-bottom: 24px;
+  // TODO: поставить фон
+  // background-color: palevioletred;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url('../images/banner.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100vh;
+
+  @media (min-width: 768px) {
+    // min-height: 600px;
+  }
 }
 
 .hero {
@@ -13,6 +26,7 @@
 
 .hero__title {
   margin-top: 0;
+  margin-bottom: 48px;
   color: $primary-white-color;
 }
 
@@ -36,4 +50,29 @@
   transform: scale(1.03);
   // TODO: добавить изменение цвета на темный вторичный акцент
   // background-color: teal;
+}
+
+.next-link {
+  position: absolute;
+  bottom: 32px;
+  left: 50%;
+  display: block;
+  width: 64px;
+  height: 64px;
+  border-radius: 50%;
+  transform: translateX(-50%);
+  text-decoration: none;
+  background-image: url('../images/arrow-down.svg');
+  background-size: 70%;
+  background-repeat: no-repeat;
+  background-position: 50% 70%;
+  cursor: pointer;
+  transition: transform 250ms $transition-function,
+    background-color 250ms $transition-function;
+}
+
+.next-link:hover,
+.next-link:focus {
+  background-color: rgba(0, 0, 0, 0.3);
+  transform: translateX(-50%) scale(1.15);
 }
