--- a/src/sass/base.scss
+++ b/src/sass/base.scss
@@ -13,6 +13,7 @@ html {
 body {
   margin: 0;
   color: #212121;
+  line-height: 1.3;
   background-color: #fff;
   font-family: Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif,
