--- a/src/sass/container.scss
+++ b/src/sass/container.scss
@@ -4,6 +4,10 @@
   margin: 0px auto;
   padding: 0px 16px;
 
+  @media (min-width: 576px) {
+    width: 540px;
+  }
+
   @media (min-width: 768px) {
     width: 720px;
   }
