Add advantages section

--- a/src/sass/features.scss
+++ b/src/sass/features.scss
@@ -20,5 +20,11 @@
 }
 
 .feature-list__item h3 {
+  margin-top: 0;
   text-align: center;
+}
+
+.feature-list__item p {
+  margin-top: 0;
+  margin-bottom: 0;
 }
