--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -3,8 +3,9 @@
 @import './container.scss';
 @import './page-header.scss';
 @import './baner.scss';
-@import './features.scss';
 @import './section.scss';
+@import './features.scss';
+@import './advantages.scss';
 @import './list.scss';
 @import './team.scss';
 @import './page-footer.scss';
