--- a/src/sass/baner.scss
+++ b/src/sass/baner.scss
@@ -1,27 +1,25 @@
 .baner {
   position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  // min-height: 300px;
   padding-top: 24px;
   padding-bottom: 24px;
-  // TODO: поставить фон
-  // background-color: palevioletred;
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
     url('../images/banner.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   height: 100vh;
-
-  @media (min-width: 768px) {
-    // min-height: 600px;
-  }
 }
 
 .hero {
+  position: absolute;
+  top: 25%;
+  left: 50%;
+  width: 100%;
+  padding-left: 16px;
+  padding-right: 16px;
+  transform: translateX(-50%);
   text-align: center;
   color: $primary-white-color;
+  width: 320px;
 }
 
 .hero__title {
@@ -54,7 +52,7 @@
 
 .next-link {
   position: absolute;
-  bottom: 32px;
+  bottom: 64px;
   left: 50%;
   display: block;
   width: 64px;
@@ -75,4 +73,11 @@
 .next-link:focus {
   background-color: rgba(0, 0, 0, 0.3);
   transform: translateX(-50%) scale(1.15);
+}
+
+.site-logo {
+  display: inline-block;
+  text-decoration: none;
+  color: $primary-black-color;
+  user-select: none;
 }
