--- a/src/sass/advantages.scss
+++ b/src/sass/advantages.scss
@@ -1,3 +1,10 @@
+.advantages {
+  @media (min-width: 960px) {
+    display: flex;
+    align-items: flex-start;
+  }
+}
+
 .advantages__list {
   padding: 0;
   margin: 0;
