--- a/src/sass/team.scss
+++ b/src/sass/team.scss
@@ -8,10 +8,25 @@
   }
 }
 
+@media (max-width: 767px) {
+  .team__item + .team__item {
+    margin-top: 20px;
+  }
+}
+
 .team__item {
+  box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2),
+    0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+
   @media (min-width: 768px) {
     flex-basis: calc(100% / 3 - 8px);
+    flex-grow: 0;
+    flex-shrink: 0;
   }
+}
+
+.team-member__content {
+  padding: 8px;
 }
 
 .team__item:not(:last-child) {
@@ -25,4 +40,40 @@
   width: 100%;
   height: 260px;
   object-fit: cover;
+}
+
+.team-member__name {
+  margin-top: 20px;
+  margin-bottom: 8px;
+  font-size: 22px;
+}
+
+.team-member__occupation {
+  margin-top: 0;
+  color: #2a2a2a;
+  text-transform: uppercase;
+  font-weight: 500;
+  font-size: 16px;
+  margin-bottom: 12px;
+}
+
+.team-member__email {
+  display: flex;
+  align-items: center;
+  color: $accent-color;
+  text-decoration: none;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.team-member__email::before {
+  display: inline-block;
+  content: '';
+  width: 12px;
+  height: 12px;
+  margin-right: 4px;
+  background-image: url('../images/link.svg');
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
 }
