--- a/src/sass/section.scss
+++ b/src/sass/section.scss
@@ -1,11 +1,28 @@
 .section {
-  padding-top: 32px;
-  padding-bottom: 32px;
+  padding-top: 48px;
+  padding-bottom: 48px;
 }
 
 .section__title {
   margin-top: 0;
-  margin-bottom: 32px;
-  font-size: 28px;
+  margin-bottom: 48px;
+  font-size: 32px;
   line-height: 1.5;
+}
+
+// .section__title::after {
+//   display: block;
+//   content: '';
+//   margin-left: auto;
+//   margin-right: auto;
+//   margin-top: 4px;
+//   height: 3px;
+//   width: 100%;
+//   background-color: $accent-color;
+// }
+
+@media (max-width: 1139px) {
+  .section__title {
+    text-align: center;
+  }
 }
