--- a/src/sass/banner.scss
+++ b/src/sass/banner.scss
@@ -1,12 +1,26 @@
-.baner {
+.banner {
   position: relative;
   padding-top: 24px;
   padding-bottom: 24px;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url('../images/banner.jpg');
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center;
   height: 100vh;
+
+  @media (max-width: 767px) {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+      url('../images/banner-mobile.jpg');
+  }
+
+  @media (min-width: 768px) {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+      url('../images/banner-tablet.jpg');
+  }
+
+  @media (min-width: 1140px) {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+      url('../images/banner-desktop.jpg');
+  }
 }
 
 .hero {
@@ -19,10 +33,11 @@
   transform: translateX(-50%);
   text-align: center;
   color: $primary-white-color;
-  width: 320px;
+  width: calc(100vw - 16px);
+  max-width: 400px;
 
   @media (min-width: 768px) {
-    width: 600px;
+    max-width: 600px;
     top: 50%;
     transform: translate(-50%, -50%);
   }
