--- a/src/sass/features.scss
+++ b/src/sass/features.scss
@@ -2,29 +2,68 @@
   padding: 0;
   margin: 0;
   list-style: none;
+  margin-bottom: 32px;
 
-  @media (min-width: 576px) {
+  @media (min-width: 768px) {
     display: flex;
     flex-wrap: wrap;
   }
 }
 
-.feature-list__item {
-  @media (min-width: 576px) {
-    flex-basis: 50%;
-  }
-
-  @media (min-width: 768px) {
-    flex-basis: calc(100% / 3);
-  }
-}
-
 .feature-list__item h3 {
   margin-top: 0;
+  margin-bottom: 12px;
   text-align: center;
 }
 
 .feature-list__item p {
   margin-top: 0;
   margin-bottom: 0;
+  line-height: 1.5;
+}
+
+@media (max-width: 767px) {
+  .feature-list__item {
+    margin-bottom: 20px;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1139px) {
+  .feature-list__item {
+    flex-basis: calc(50% - 16px);
+
+    margin-right: 32px;
+    margin-bottom: 32px;
+  }
+
+  .feature-list__item:nth-child(2n) {
+    margin-right: 0;
+  }
+
+  .feature-list__item:nth-last-child(-n + 2) {
+    margin-bottom: 0;
+  }
+}
+
+@media (min-width: 768px) {
+  .feature-list {
+    margin-bottom: 48px;
+  }
+}
+
+@media (min-width: 1140px) {
+  .feature-list__item {
+    flex-basis: calc(100% / 3 - 16px);
+
+    margin-right: 24px;
+    margin-bottom: 24px;
+  }
+
+  .feature-list__item:nth-child(3n) {
+    margin-right: 0;
+  }
+
+  .feature-list__item:nth-last-child(-n + 3) {
+    margin-bottom: 0;
+  }
 }
