--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,7 +1,7 @@
 @import './vars.scss';
 @import './base.scss';
 @import './container.scss';
-@import './baner.scss';
+@import './banner.scss';
 @import './section.scss';
 @import './features.scss';
 @import './advantages.scss';
