--- a/src/sass/team.scss
+++ b/src/sass/team.scss
@@ -2,44 +2,24 @@
   list-style: none;
   padding: 0;
   margin: 0;
-
-  @media (min-width: 768px) {
-    display: flex;
-  }
-}
-
-@media (max-width: 767px) {
-  .team__item + .team__item {
-    margin-top: 20px;
-  }
 }
 
 .team__item {
+  margin-left: auto;
+  margin-right: auto;
   box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2),
     0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
-
-  @media (min-width: 768px) {
-    flex-basis: calc(100% / 3 - 8px);
-    flex-grow: 0;
-    flex-shrink: 0;
-  }
-}
-
-.team-member__content {
-  padding: 8px;
-}
-
-.team__item:not(:last-child) {
-  @media (min-width: 768px) {
-    margin-right: 12px;
-  }
 }
 
 .team-member__photo {
   display: block;
   width: 100%;
-  height: 260px;
+  height: 300px;
   object-fit: cover;
+}
+
+.team-member__content {
+  padding: 8px;
 }
 
 .team-member__name {
@@ -76,4 +56,56 @@
   background-repeat: no-repeat;
   background-size: contain;
   background-position: center;
+}
+
+@media (max-width: 1139px) {
+  .team__item + .team__item {
+    margin-top: 20px;
+  }
+}
+
+@media (max-width: 767px) {
+  .team__item {
+    max-width: 400px;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1139px) {
+  .team__item {
+    display: flex;
+    width: 520px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .team-member__content {
+    padding: 16px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .team-member__name {
+    margin-top: 0;
+  }
+
+  .team-member__photo {
+    width: 200px;
+    height: 200px;
+  }
+}
+
+@media (min-width: 1140px) {
+  .team {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .team__item {
+    flex-basis: calc(100% / 3 - 8px);
+  }
+
+  .team__item:not(:last-child) {
+    margin-right: 12px;
+  }
 }
